--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,20 +14,9 @@
 <body>
 
     <div class="header"></div>
-
-    <h2 onclick="loadClientes()">home</h2>
-    <table id="clientes-table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Telefone</th>
-            </tr>
-        </thead>
-        <tbody id="clientes-body">
-            <!-- Os clientes serão adicionados aqui dinamicamente -->
-        </tbody>
-    </table>
+    <div class="conteiner-contente">
+        <h2>home</h2>
+    </div>
     <script src="../components/navLoader.js"></script>
     <script>
         window.addEventListener('DOMContentLoaded', () => {
