feat: search de clientes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="header"></div>
-    <div class="conteiner-contente">
+    <div class="conteiner-content">
         <h2>home</h2>
     </div>
     <script src="../components/navLoader.js"></script>
