--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self';"> -->
-    <link rel="stylesheet" href="../components/navLoader.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../../components/navLoader.css">
+    <link rel="stylesheet" href="../styles.css">
 
     <title>Lista de Clientes</title>
 </head>
@@ -17,14 +17,14 @@
     <div class="conteiner-content">
         <h2>home</h2>
     </div>
-    <script src="../components/navLoader.js"></script>
+    <script src="../../components/navLoader.js"></script>
     <script>
         window.addEventListener('DOMContentLoaded', () => {
             // cria menu passando a pagina atual (ativa)
             criarMenu('Home');
         });
     </script>
-    <script src="../../renderer.js"></script>
+    <script src="../../../renderer.js"></script>
 </body>
 
 </html>
